tests/parse_print/random_perturb/enum_liberated/delete-10/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:7:9:
  |
7 | find y  E2
  |         ^
Missing ,

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:7:11:
  |
7 | find y  E2
  |           ^
Missing Domain

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:8:1:
  |
8 | find z : E2(a..c)
  | ^
Missing :

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:8:10:
  |
8 | find z : E2(a..c)
  |          ^^
Error: range not supported on non enum ranges

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:8:10:
  |
8 | find z : E2(a..c)
  |          ^^
Tried to use a Value where Domain was expected

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:9:10:
  |
9 | find t : E2(b,d)
  |          ^^
Error: range not supported on non enum ranges

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:9:10:
  |
9 | find t : E2(b,d)
  |          ^^
Tried to use a Value where Domain was expected

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:13:10:
   |
13 | find k : E2
   |          ^^
Tried to use a Value where Domain was expected

tests/parse_print/random_perturb/enum_liberated/delete-10/delete-10.essence:14:20:
   |
14 | such that k = max(`E2`)
   |                    ^^
Tried to use a Value where Domain was expected
